# plugins

./: .gitignore  CMakeLists.txt
.github/workflows/: build-windows.yml
Source/: JuicePresets.h  JuiceTag.m4a  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
